changed to use elasticsearch 7.9.2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,11 @@ services:
     build: ./elasticsearch
     ports:
       - 9200:9200
+      - 9300:9300
     volumes:
       - ./elasticsearch-data:/usr/share/elasticsearch/data
+    environment:
+      - discovery.type=single-node
   kibana:
     build: ./kibana
     ports:
