--- a/kibana/Dockerfile
+++ b/kibana/Dockerfile
@@ -1,3 +1,2 @@
-FROM kibana
-RUN kibana-plugin install x-pack
+FROM kibana:7.9.2
 RUN echo "xpack.security.enabled: false" > /usr/share/kibana/kibana.yml
